examples/test_package/DoubleDC_Test/steps/benchzebra:precise.pl_run4/#test_analysis_3_result.txt
### **Evaluation Report: Zebra Puzzle in ProbLog**

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses and their attributes based on given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, predicate definitions, and error handling.

---

#### **3. Test Results Summary**
The provided code fails during execution with the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Queries:**
- The query `member/2` fails because the predicate `member` is not defined in the provided code. The error occurs at line 4.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
  - **Location:** Line 4 of the code.
  - **Issue:** The predicate `member` is used but not defined in the code. The code relies on `my_member/2`, which is defined but not used consistently.
  - **Expected:** The `member/2` predicate should be defined or replaced with `my_member/2`.

---

#### **5. Root Cause Analysis**
- **Classical Prolog Scenario:**
  - The error is due to the absence of the `member/2` predicate, which is a standard Prolog predicate for list membership. The code defines `my_member/2` but does not use it consistently.
  - **Recursive Termination:** The recursive predicates (`right_of/3`, `next_to/3`, `my_member/2`) are correctly defined and should terminate for valid inputs.

- **ProbLog Probabilistic Scenario:**
  - The code does not use probabilistic facts or rules, so no probabilistic analysis is required.
  - **DeepProbLog Feature:** Not used in this implementation.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The logic is sound, but the missing `member/2` predicate causes failure.
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts/rules).
  - **Neural Network Integration:** Not used.

- **Edge Cases:**
  - **Undefined Predicates:** The missing `member/2` is a critical oversight.
  - **Non-list Input:** The code assumes valid list inputs for predicates like `right_of/3` and `next_to/3`.
  - **Recursive Performance:** The recursion depth is limited to the number of houses (5), so performance is not an issue.

---

#### **7. Error Summary**

| Number | Problem                     | Impact                          | Suggestion                          |
|--------|-----------------------------|---------------------------------|-------------------------------------|
| 1      | Undefined `member/2`        | Code fails to execute           | Replace `member/2` with `my_member/2` or define `member/2`. |
| 2      | Inconsistent predicate use  | Potential confusion in debugging | Ensure all predicates are consistently defined and used. |

---

### **Conclusion**
The Zebra Puzzle implementation in ProbLog fails due to the undefined `member/2` predicate. The logical structure is otherwise correct, but the missing predicate prevents execution. To fix this, either define `member/2` or replace its usage with the already defined `my_member/2`. No probabilistic or DeepProbLog features are used in this code. 

**Word Count:** 450 words.